--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family= Caveat & display=swap') ;
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -16,6 +16,7 @@
 }
 body{
     font-family: 'Caveat', cursive;
+    font-size: 20px;
 }
 
 li{
@@ -104,4 +105,7 @@ p{
 }
 .titulos{
     font-size: 200%;
+}
+.container{
+  display: flex;
 }
