--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
 }
-
 @media screen and (max-width: 1000px){
     .projeto{
         flex-wrap: wrap;
@@ -18,21 +17,17 @@ body{
     font-family: 'Caveat', cursive;
     font-size: 20px;
 }
-
 li{
     list-style: none;
 }
-
 a{
     text-decoration: none;
     color: white;
 }
-
 p{
     margin: 2%;
     font-weight: 400;
 }
-
 .fundo-botoes{
     justify-content: center;
     display: flex;
@@ -41,33 +36,28 @@ p{
     background-color: black;
     padding-left: 10px;
 }
-
 .fundosobremim{
     text-align: center;
-    display: flex;
+    
     flex-direction: column;
     margin-top: 5%;
     color: white;
     background-color: rgb(252, 171, 171);
 }
-
 .fundosobremim p{
   font-size: 30px;
 }
-
 .titulos-projetos{
     font-weight: 600;
     text-align: center;
     margin-top: 5%;
 }
-
 .projetos{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 5%;
 }
-
 .projeto-direita{
     display: flex;
     flex-direction: row;
@@ -76,7 +66,6 @@ p{
     padding: 5%;
     margin-top: 5%;
 }
-
 .projeto-esquerda{
     display: flex;
     flex-direction: row-reverse;
@@ -85,7 +74,6 @@ p{
     padding: 5%;
     margin-top: 5%;
 }
-
 .imagens-projetos{
     width: 450px;
     height: 350px;
@@ -106,11 +94,32 @@ p{
    font-size: 25px;
    color: white;
    background-color: rgb(238, 164, 248);
-    margin-top: 3%;
+   padding: 30px;
+   
 }
 .titulos{
     font-size: 200%;
 }
 .container{
   display: flex;
+}
+input{
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  padding: 10px 30px;
+
+}
+h2{
+  color: white;
+}
+checkbox {
+   border: none;
+  outline: none;
+}
+textarea{
+    border: none;
+  outline: none;
+  border-radius: 30px;
+  padding: 10px 30px;
 }
